# betterfetch-rust

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Release_notes.md  TODO.md  build.rs  justfile
docs/: Release_notes.md  config.md
src/: args.rs  ascii.rs  config.rs  main.rs  packages.rs  system.rs  utils.rs
