[package]
name = "betterfetch" # !! The compiled binary will have this name !!
version = "0.1.0" # !! The --version will output this !!
edition = "2024" 
build = "build.rs"
authors = ["David Balishyan <davidbalishyan12@gmail.com>"]
rust-version = "1.88.0"
readme="README.md"
homepage = "https://betterfetch.github.io"
license = "MIT"
repository = "https://github.com/betterfetch/betterfetch" 



[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
sysinfo = "0.30.12"
os_info = "3.8.2"
hostname = "0.4.0"
users = "0.11.0" 
colored = "2.1.0"
which = "6.0.1" 
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
